# ocr-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: config.py  deps.py  main.py
app/routers/: generic.py  guide.py  health.py  invoice.py  playground.py  xml.py
app/schemas/: common.py  generic.py  guide.py  invoice.py  xml.py
app/services/: image_preprocessor.py  ocr_engine.py  pdf_processor.py  xml_parser.py
app/services/extractors/: guide.py  invoice.py  patterns.py
app/utils/: file_validator.py
tests/: test_extractors.py
